@@ -2,7 +2,7 @@ Package: triplex
 Type: Package
 Title: Search and visualize intramolecular triplex-forming sequences in
         DNA
-Version: 1.0.3
+Version: 1.0.4
 Date: 2013-02-14
 Authors@R: c(person("Jiri", "Hon", role = c("aut", "cre"),
                     email = "jiri.hon@gmail.com"),
